--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
     <center>
-        <a href="" download="MySelfie.jpg" id="downloadImg">
+        <a href="" download="MySelfie.jpg" id="download_img">
         </a>
         <h1>Voice Selfie App 
             <img src="selfie.jpeg" id="logo_img">
@@ -42,7 +42,7 @@
 </div>
         <br>
 
-        <label>Your selife Will Display Here: </label>
+        <label>Your selfie Will Display Here: </label>
 <div id="result">
 </div>
     </center>
